k8s/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aegis
  namespace: ao7-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aegis
  template:
    metadata:
      labels:
        app: aegis
    spec:
      containers:
        - name: aegis
          image: aegis:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
